--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - PORT=8000
       - MONGO_URI=mongodb://mongo:27017/
       - MONGO_DB_NAME=my-chess
-      - PUBLIC_URL=http://localhost:8000
+      - PUBLIC_URL=https://3fcf-2804-14d-1688-816f-bbfb-f1ff-6ed1-589.sa.ngrok.io
     build: ./backend
     ports:
       - "8000:8000"
